unpackaged/main/default/objects/Activity/fields/Account_temp__c.field-meta.xml
<CustomField>
    <fullName>Account_temp__c</fullName>
    <description>Capture original Account name before all Account records are deleted and re-uploaded as part of Data Cleanse exercise.</description>
    <label>Account (temp)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>