unpackaged/main/default/objects/Activity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Archived (replaced with Time to Complete) Calculates total business hours from the time task was created until it was marked as complete</description>
    <formula>ROUND( 9 * (

   ( 5 * FLOOR( ( DATEVALUE(  CompletedDateTime ) - DATE( 1900, 1, 8) ) / 7) +

    MIN(5, 

     MOD( DATEVALUE( CompletedDateTime ) - DATE( 1900, 1, 8), 7) +

     MIN( 1, 24 / 9 * ( MOD( CompletedDateTime - DATETIMEVALUE( &#39;1900-01-08 09:00:00&#39; ), 1 ) ) )

    ) 

   )

 -

   ( 5 * FLOOR( ( DATEVALUE(   Create_Date_Time__c     ) - DATE( 1900, 1, 8) ) / 7) +

     MIN( 5,

      MOD( DATEVALUE( Create_Date_Time__c ) - DATE( 1996, 1, 1), 7 ) +

      MIN( 1, 24 / 9 * ( MOD( Create_Date_Time__c - DATETIMEVALUE( &#39;1900-01-08 09:00:00&#39; ), 1) ) )

    )

   ) 

  ), 

0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age in business hours
Mon-Fri (9am - 6pm)</inlineHelpText>
    <label>Archived - Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>