unpackaged/main/default/objects/Activity/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <inlineHelpText>Record what was the final outcome of your call with the potential customer</inlineHelpText>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voicemail left</fullName>
            </value>
            <value>
                <fullName>No contact made</fullName>
            </value>
            <value>
                <fullName>Unacceptable risk</fullName>
            </value>
            <value>
                <fullName>Accept online</fullName>
            </value>
            <value>
                <fullName>Callback arranged</fullName>
            </value>
            <value>
                <fullName>Doesnt want quote</fullName>
                <label>Doesn&#39;t want quote</label>
            </value>
            <value>
                <fullName>Duplicate quote</fullName>
            </value>
            <value>
                <fullName>Invalid number</fullName>
            </value>
            <value>
                <fullName>Not ready to purchase</fullName>
            </value>
            <value>
                <fullName>On Cover</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Taken elsewhere</fullName>
            </value>
            <value>
                <fullName>Number blocked</fullName>
            </value>
            <value>
                <fullName>H&amp;R car/van insurance</fullName>
            </value>
            <value>
                <fullName>Closed by Administrator</fullName>
            </value>
            <value>
                <fullName>Can&#39;t be quoted  - incorrect employee details</fullName>
                <isActive>false</isActive>
                <label>Can&#39;t be quoted  - incorrect employee details</label>
            </value>
            <value>
                <fullName>Can&#39;t be quoted UW</fullName>
                <isActive>false</isActive>
                <label>Can&#39;t be quoted UW</label>
            </value>
            <value>
                <fullName>Hire &amp; Reward</fullName>
                <isActive>false</isActive>
                <label>Hire &amp; Reward</label>
            </value>
            <value>
                <fullName>No answer</fullName>
                <isActive>false</isActive>
                <label>No answer</label>
            </value>
            <value>
                <fullName>Unacceptable trade</fullName>
                <isActive>false</isActive>
                <label>Unacceptable trade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>