unpackaged/main/default/objects/Activity/fields/Case_Id_temp__c.field-meta.xml
<CustomField>
    <fullName>Case_Id_temp__c</fullName>
    <description>Data Cleanse: capture originally linked case Id</description>
    <label>Case Id (temp)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>