unpackaged/main/default/objects/Activity/fields/Close_Hour__c.field-meta.xml
<CustomField>
    <fullName>Close_Hour__c</fullName>
    <description>Extracts an hour out of close data/time field to report on the hour of the day Task is closed</description>
    <formula>HOUR(TIMEVALUE( CompletedDateTime ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>