unpackaged/main/default/objects/Activity/fields/Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Time__c</fullName>
    <description>Captures both date and time when Task is created</description>
    <label>Create Date/Time</label>
    <type>DateTime</type>
</CustomField>