unpackaged/main/default/objects/Activity/fields/Exclude__c.field-meta.xml
<CustomField>
    <fullName>Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data Cleanse: mark records that need to be excluded from the update jobs (for leads and cases)</description>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>