unpackaged/main/default/objects/Activity/fields/Hours_in_Queue__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_Queue__c</fullName>
    <description>Updated by flow to track how long it took before Task was re-assigned from the Queue to an Agent
Business Hours - Mon - Fri 9am-8pm &amp; Sun 1pm-5pm</description>
    <inlineHelpText>Business Hours (Mon-Fri, 9am- 8pm &amp; Sun 1pm-5pm)</inlineHelpText>
    <label>Hours in Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>