unpackaged/main/default/objects/Activity/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Notes taken from the related meeting</inlineHelpText>
    <label>Meeting Notes</label>
    <referenceTo>Meetings_Notes__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>