unpackaged/main/default/objects/Activity/fields/Name_temp__c.field-meta.xml
<CustomField>
    <fullName>Name_temp__c</fullName>
    <description>This is to capture original value stored in &#39;Name&#39; field which would be either Contact or Lead.
To be used in a flow, to re-establish those relationships</description>
    <label>Name (temp)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>