unpackaged/main/default/objects/Activity/fields/Out_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated via flow to mark Task records created outside of normal business hours, which are Mon - Fri 9am-8pm &amp; Sun 1pm-5pm</description>
    <label>Out of Hours</label>
    <type>Checkbox</type>
</CustomField>