unpackaged/main/default/objects/Activity/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <description>Policy type captured from related lead so it is easier for the sales agents to identify more valuable tasks</description>
    <label>Policy Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>