unpackaged/main/default/objects/Activity/fields/Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Quote_Reference__c</fullName>
    <label>Quote Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>