unpackaged/main/default/objects/Activity/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <description>Captures quoted price information from the related tasks so its easier for sales agents to identify more valuable tasks</description>
    <label>Quoted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>