unpackaged/main/default/objects/Activity/fields/Related_To_temp__c.field-meta.xml
<CustomField>
    <fullName>Related_To_temp__c</fullName>
    <description>This is to capture original relationship between the email and Account, Contact and/or Insurance Policy (copies data from &#39;Related to field)
To be used in a flow, to re-establish those relationships</description>
    <label>Insurance (temp)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>