unpackaged/main/default/objects/Activity/fields/Subject2__c.field-meta.xml
<CustomField>
    <fullName>Subject2__c</fullName>
    <description>Subject used in a Log a Call action on Lead</description>
    <inlineHelpText>Please use this only for calls logged from Lead records</inlineHelpText>
    <label>Call Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call 1</fullName>
            </value>
            <value>
                <fullName>Call 2</fullName>
            </value>
            <value>
                <fullName>Call 3</fullName>
            </value>
            <value>
                <fullName>Call 4</fullName>
            </value>
            <value>
                <fullName>Call 5</fullName>
            </value>
            <value>
                <fullName>Call 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>