unpackaged/main/default/objects/Activity/fields/Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete__c</fullName>
    <description>Calculates total business hours from the time task was created until it was marked as complete
Business Hours - Mon - Fri 9am-8pm &amp; Sun 1pm-5pm</description>
    <label>Time to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>