unpackaged/main/default/objects/Activity/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <description>Captures trade information from the related tasks so its easier for sales agents to identify more valuable tasks</description>
    <label>Trade</label>
    <length>200</length>
    <type>Text</type>
</CustomField>